--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,5 +7,11 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.4"
+  },
+
+  "scripts": {
+
+    "start": "node server.js",
+    "stop": "taskkill /F /IM node.exe /T"
   }
 }
